--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
                 if (song) {
                     titleElement.innerText = song.title;
-                    playerElement.src = `https://www.youtube.com/embed/${song.youtube_id}`;
+                    playerElement.src = `https://www.youtube.com/embed/${song.youtube_id}?si=4c182HGkPeMlITfw`;
                 } else {
                     titleElement.innerText = "Errore nel caricamento della canzone.";
                 }
