--- a/index.html
+++ b/index.html
@@ -15,19 +15,17 @@
         :root {
             --bg-main: #1a1a22;
             --bg-glow: rgba(230, 0, 57, 0.22);
-            --bubble: rgba(255, 128, 170, 0.07);
 
-            --card-bg: #24202d;
-            --card-border: rgba(255, 122, 168, 0.35);
+            --card-bg: #1f1f2b;
+            --card-border: rgba(255, 255, 255, 0.07);
 
             --text-primary: #fff;
             --text-dim: #9b9ba8;
-            --text-soft: #ffc2dd;
 
             --accent: #ff477e;
-            --accent-border: rgba(255, 71, 126, 0.45);
+            --accent-border: rgba(255, 71, 126, 0.4);
 
-            --radius-xl: 1.25rem;
+            --radius-xl: 1rem;
             --radius-lg: 0.75rem;
         }
 
@@ -42,78 +40,62 @@
             align-items: center;
             justify-content: center;
             padding: 24px;
-            font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-            color: var(--text-primary);
-
-            /* background: tinta scura + pois rosa molto soft */
             background:
                 radial-gradient(circle at 20% 20%, var(--bg-glow) 0%, rgba(0, 0, 0, 0) 60%),
-                radial-gradient(circle at 80% 20%, rgba(255, 71, 126, 0.12) 0%, rgba(0, 0, 0, 0) 60%),
-                repeating-radial-gradient(circle at 10% 90%, var(--bubble) 0 2px, transparent 2px 40px),
                 var(--bg-main);
-            background-blend-mode: screen, normal, normal, normal;
+            font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+            color: var(--text-primary);
         }
 
+        .page-wrapper {
+            width: 100%;
+            max-width: 880px;
+            display: flex;
+            flex-direction: column;
+            gap: 16px;
+        }
+
+        /* SITE TITLE (fuori dalla card, sopra) */
+        .site-header {
+            text-align: center;
+        }
+
+        .site-title {
+            font-family: "Lilita One", system-ui, sans-serif;
+            font-size: clamp(2.8rem, 1vw + 2.4rem, 3.4rem);
+            /* più grande */
+            line-height: 2;
+            font-weight: 400;
+            margin: 0;
+
+            background: linear-gradient(90deg, var(--accent) 0%, #fff 60%);
+            -webkit-background-clip: text;
+            background-clip: text;
+            color: transparent;
+
+            text-shadow: 0 2px 6px rgba(255, 71, 126, 0.4);
+            letter-spacing: 0.02em;
+        }
+
+        /* CARD CENTRALE */
         .app-card {
             position: relative;
-            width: 100%;
-            max-width: 800px;
-
             background: var(--card-bg);
-            border: 2px solid var(--card-border);
+            border: 1px solid var(--card-border);
             border-radius: var(--radius-xl);
-
-            box-shadow:
-                0 30px 80px rgba(0, 0, 0, 0.8),
-                0 0 30px rgba(255, 71, 126, 0.2);
-
+            box-shadow: 0 30px 80px rgba(0, 0, 0, 0.8);
             padding: 24px 24px 16px;
             display: flex;
             flex-direction: column;
             gap: 20px;
         }
 
-        header {
-            text-align: center;
-            position: relative;
-            padding-top: 4px;
-        }
-
-        .title-row {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-        }
-
-        /* titolo un pochino sticker-ish */
-        .main-title {
-            font-family: "Lilita One", system-ui, sans-serif;
-            font-size: clamp(2.1rem, 1vw + 1.6rem, 2.5rem);
-            line-height: 1.05;
-            font-weight: 400;
-            margin: 0;
-
-            background: linear-gradient(90deg, #ff6fa3 0%, #fff 60%);
-            -webkit-background-clip: text;
-            background-clip: text;
-            color: transparent;
-
-            text-shadow:
-                0 2px 6px rgba(255, 71, 126, 0.4),
-                0 0 10px rgba(255, 71, 126, 0.4);
-
-            letter-spacing: 0.015em;
-
-            /* leggerissima rotazione per dare vibe adesivo attaccato */
-            transform: rotate(-0.5deg);
-        }
-
-        /* sezione badge */
+        /* pill sopra il titolo canzone */
         .pill-section {
             text-align: center;
-            margin-top: 12px;
-            margin-bottom: 20px;
+            margin-top: 4px;
+            margin-bottom: 8px;
+            /* meno spazio rispetto a prima */
         }
 
         .pill {
@@ -122,26 +104,21 @@
             justify-content: center;
             gap: 6px;
 
-            background: rgba(255, 71, 126, 0.14);
+            background: rgba(255, 71, 126, 0.08);
             border: 1px solid var(--accent-border);
-            color: var(--accent);
+            border-radius: 999px;
 
             font-size: 0.7rem;
             font-weight: 600;
             line-height: 1;
-            padding: 7px 12px;
-            border-radius: 999px;
+            color: var(--accent);
 
-            box-shadow:
-                0 8px 16px rgba(0, 0, 0, 0.6),
-                0 0 12px rgba(255, 71, 126, 0.4);
+            padding: 6px 12px;
         }
 
-        .pill .dot {
-            width: 6px;
-            height: 6px;
-            background-color: var(--accent);
-            border-radius: 999px;
+        .pill-icon {
+            font-size: 0.8rem;
+            line-height: 1;
         }
 
         main {
@@ -150,17 +127,17 @@
             gap: 12px;
         }
 
-        /* titolo del brano del giorno */
+        /* titolo della canzone del giorno */
         #song-title {
             font-size: 1.1rem;
             font-weight: 600;
             line-height: 1.4;
             min-height: 2.2rem;
             text-align: center;
-            color: var(--text-soft);
-            text-shadow: 0 2px 8px rgba(255, 71, 126, 0.3);
+            color: var(--text-primary);
         }
 
+        /* VIDEO EVIDENZIATO */
         .video-wrapper {
             position: relative;
             width: 100%;
@@ -169,10 +146,11 @@
 
             border-radius: var(--radius-lg);
             overflow: hidden;
+
+            border: 2px solid rgba(255, 71, 126, 0.3);
             box-shadow:
-                0 18px 40px rgba(0, 0, 0, 0.9),
+                0 22px 50px rgba(0, 0, 0, 0.9),
                 0 0 24px rgba(255, 71, 126, 0.25);
-            border: 2px solid rgba(255, 71, 126, 0.25);
         }
 
         .video-wrapper iframe {
@@ -183,20 +161,11 @@
             border: 0;
         }
 
-        footer {
-            text-align: center;
-            color: var(--text-dim);
-            font-size: 0.8rem;
-            line-height: 1.4;
-            border-top: 1px solid rgba(255, 255, 255, 0.07);
-            padding-top: 16px;
-        }
-
         /* plush sticker */
         .teto-plush {
             position: absolute;
-            right: 0px;
-            bottom: 80px;
+            right: -5px;
+            bottom: 65px;
             width: min(140px, 30%);
             max-width: 160px;
             filter: drop-shadow(0 12px 16px rgba(0, 0, 0, 0.8));
@@ -204,10 +173,53 @@
             user-select: none;
         }
 
+        /* FOOTER LEGALE ORA DENTRO LA CARD */
+        footer.site-footer {
+            text-align: center;
+            color: var(--text-dim);
+            font-size: 0.8rem;
+            line-height: 1.4;
+            border-top: 1px solid rgba(255, 255, 255, 0.05);
+            padding-top: 12px;
+        }
+
+        /* CONTATORE VISITE TOTALE (fuori dalla card, sotto) */
+        .visits-wrapper {
+            text-align: center;
+            font-size: 0.8rem;
+            color: #cfcfd8;
+            /* più chiaro per non perdersi nell'ombra */
+            margin-top: 24px;
+            /* più distacco dalla card così non 'entra' nell'ombra */
+        }
+
+        .visits-pill {
+            display: inline-flex;
+            align-items: baseline;
+            gap: 6px;
+            background: rgba(255, 255, 255, 0.07);
+            border: 1px solid rgba(255, 255, 255, 0.18);
+            border-radius: 999px;
+            padding: 6px 10px;
+        }
+
+        .visits-label {
+            font-weight: 500;
+            color: #cfcfd8;
+        }
+
+        .visits-count {
+            font-weight: 600;
+            color: var(--accent);
+            min-width: 2.5em;
+            text-align: right;
+        }
+
         @media (max-width: 480px) {
+
             .app-card {
                 padding: 20px 16px 20px;
-                border-radius: 1rem;
+                border-radius: 0.9rem;
             }
 
             .teto-plush {
@@ -216,56 +228,75 @@
                 width: 110px;
             }
 
-            .main-title {
-                font-size: 2.1rem;
+            .site-title {
+                font-size: 2.6rem;
             }
 
             #song-title {
                 font-size: 1rem;
+            }
+
+            .visits-wrapper {
+                font-size: 0.75rem;
             }
         }
     </style>
 </head>
 
 <body>
-    <div class="app-card">
-        <header>
-            <div class="title-row">
-                <h1 class="main-title">Teto Song of the Day</h1>
-            </div>
+    <div class="page-wrapper">
+
+        <!-- TITOLO DEL SITO (fuori dalla card, sopra) -->
+        <header class="site-header">
+            <h1 class="site-title">Teto Song of the Day</h1>
         </header>
 
-        <div class="pill-section">
-            <div class="pill">
-                <span class="dot"></span>
-                <span>Today's Pick</span>
+        <!-- CARD CENTRALE -->
+        <section class="app-card">
+
+            <div class="pill-section">
+                <div class="pill">
+                    <span class="pill-icon">♪</span>
+                    <span>Today's Pick</span>
+                </div>
+            </div>
+
+            <main>
+                <div id="song-title">Loading...</div>
+
+                <div class="video-wrapper">
+                    <iframe id="youtube-player" src="" title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+            </main>
+
+            <!-- Plush Teto -->
+            <img src="teto-plush.png" alt="Kasane Teto plush" class="teto-plush" />
+
+            <!-- FOOTER LEGALE ORA DENTRO LA CARD -->
+            <footer class="site-footer">
+                Fan-made, non-commercial project. All songs and embedded videos are the property of their respective
+                composers, producers, and labels. “Kasane Teto / 重音テト” is a character originally associated with the
+                UTAU community and the TWINDRILL team.
+            </footer>
+        </section>
+
+        <!-- CONTATORE VISITE TOTALE (fuori dalla card, sotto) -->
+        <div class="visits-wrapper">
+            <div class="visits-pill">
+                <span class="visits-label">Total visits:</span>
+                <span class="visits-count" id="visits-count">--</span>
             </div>
         </div>
 
-        <main>
-            <div id="song-title">Loading...</div>
-
-            <div class="video-wrapper">
-                <iframe id="youtube-player" src="" title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
-            </div>
-        </main>
-
-        <footer>
-            Fan-made, non-commercial project. All songs and embedded videos are the property of their respective
-            composers, producers, and labels. “Kasane Teto / 重音テト” is a character originally associated with the
-            UTAU community and the TWINDRILL team.
-        </footer>
-
-        <!-- Teto plush sticker -->
-        <img src="teto-plush.png" alt="Kasane Teto plush" class="teto-plush" />
     </div>
 
     <script>
         // Wait for page load
         document.addEventListener('DOMContentLoaded', () => {
             loadSongOfTheDay();
+            loadVisitCount();
         });
 
         // Deterministic day index
@@ -277,7 +308,7 @@
             return days;
         }
 
-        // Main loader
+        // Load song of the day
         async function loadSongOfTheDay() {
             try {
                 const response = await fetch('songs.json');
@@ -301,6 +332,24 @@
             } catch (error) {
                 console.error('Unable to load songs.json:', error);
                 document.getElementById('song-title').innerText = "Error: songs.json not found.";
+            }
+        }
+
+        // TOTAL VISIT COUNTER
+        //
+        // Usa CountAPI (servizio pubblico semplice).
+        // Ogni volta che qualcuno apre la pagina, questa fetch fa "hit"
+        // e l'API risponde col nuovo valore.
+        async function loadVisitCount() {
+            const el = document.getElementById('visits-count');
+
+            try {
+                const res = await fetch("https://api.countapi.xyz/hit/teto-song-of-the-day/global");
+                const data = await res.json();
+                el.textContent = data.value ?? "0";
+            } catch (err) {
+                console.error("Visit counter error:", err);
+                el.textContent = "—";
             }
         }
     </script>
