--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Lilita+One&family=Inter:wght@400;500;600&display=swap"
         rel="stylesheet" />
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LVKKN6PN7Z"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-LVKKN6PN7Z');
+    </script>
+
     <style>
         :root {
             --bg-main: #1a1a22;
