--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Teto Song of the Day</title>
+    <meta name="description"
+        content="Scopri ogni giorno una nuova canzone di Teto, con testi, curiosità e vibes uniche.">
+    <meta name="keywords"
+        content="Teto, music, song of the day, trap, rap, tetosongoftheday, utauloid, kasane teto, vocaloid, utausong">
+    <meta name="author" content="Teto Song of the Day">
+
 
     <!-- tiny transparent favicon to stop 404 -->
     <link rel="icon" type="image/png"
