--- a/index.html
+++ b/index.html
@@ -12,23 +12,17 @@
         content="Teto, music, song of the day, trap, rap, tetosongoftheday, utauloid, kasane teto, vocaloid, utausong">
     <meta name="author" content="Teto Song of the Day">
 
-
-    <!-- tiny transparent favicon to stop 404 -->
     <link rel="icon" type="image/png"
         href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVQI12NgYGBgAAAABQABhqN6WQAAAABJRU5ErkJggg==" />
-
-    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Lilita+One&family=Inter:wght@400;500;600&display=swap"
         rel="stylesheet" />
 
-    <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-LVKKN6PN7Z"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
-
         gtag('config', 'G-LVKKN6PN7Z');
     </script>
 
@@ -36,16 +30,12 @@
         :root {
             --bg-main: #1a1a22;
             --bg-glow: rgba(230, 0, 57, 0.22);
-
             --card-bg: #1f1f2b;
             --card-border: rgba(255, 255, 255, 0.07);
-
             --text-primary: #fff;
             --text-dim: #9b9ba8;
-
             --accent: #ff477e;
             --accent-border: rgba(255, 71, 126, 0.4);
-
             --radius-xl: 1rem;
             --radius-lg: 0.75rem;
         }
@@ -61,11 +51,9 @@
             display: flex;
             align-items: center;
             justify-content: center;
-
             background:
                 radial-gradient(circle at 20% 20%, var(--bg-glow) 0%, rgba(0, 0, 0, 0) 60%),
                 var(--bg-main);
-
             font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
             color: var(--text-primary);
         }
@@ -78,13 +66,11 @@
             gap: 16px;
         }
 
-        /* header sopra la card */
         .site-header {
             text-align: center;
-            margin-bottom: 30px
+            margin-bottom: 30px;
         }
 
-        /* wrapper titolo (logo + sottotitolo) */
         .site-title {
             margin: 0;
             line-height: 1.15;
@@ -109,16 +95,13 @@
             font-weight: 400;
             line-height: 1.1;
             letter-spacing: 0.02em;
-
             background: linear-gradient(90deg, var(--accent) 0%, #fff 60%);
             -webkit-background-clip: text;
             background-clip: text;
             color: transparent;
-
             text-shadow: 0 2px 6px rgba(255, 71, 126, 0.4);
         }
 
-        /* card centrale */
         .app-card {
             position: relative;
             background: var(--card-bg);
@@ -142,16 +125,13 @@
             align-items: center;
             justify-content: center;
             gap: 6px;
-
             background: rgba(255, 71, 126, 0.08);
             border: 1px solid var(--accent-border);
             border-radius: 999px;
-
             font-size: 0.7rem;
             font-weight: 600;
             line-height: 1;
             color: var(--accent);
-
             padding: 6px 12px;
         }
 
@@ -180,10 +160,8 @@
             width: 100%;
             aspect-ratio: 16/9;
             background-color: #000;
-
             border-radius: var(--radius-lg);
             overflow: hidden;
-
             border: 2px solid rgba(255, 71, 126, 0.3);
             box-shadow:
                 0 22px 50px rgba(0, 0, 0, 0.9),
@@ -198,7 +176,6 @@
             border: 0;
         }
 
-        /* plush */
         .teto-plush {
             position: absolute;
             right: -5px;
@@ -210,7 +187,6 @@
             user-select: none;
         }
 
-        /* disclaimer in fondo alla card */
         footer.site-footer {
             text-align: center;
             color: var(--text-dim);
@@ -220,7 +196,56 @@
             padding-top: 12px;
         }
 
-        /* counter visite giornaliere sotto la card */
+        .social-cta-floating {
+            position: absolute;
+            top: 16px;
+            left: 16px;
+            display: inline-flex;
+            align-items: center;
+            gap: 8px;
+            background: rgba(255, 255, 255, 0.05);
+            border: 1px solid rgba(255, 255, 255, 0.18);
+            border-radius: 999px;
+            padding: 6px 12px;
+            line-height: 1;
+            text-decoration: none;
+            color: var(--text-primary);
+            font-weight: 500;
+            font-size: 0.75rem;
+        }
+
+        .social-cta-floating:hover {
+            background: rgba(255, 255, 255, 0.08);
+        }
+
+        .tiktok-icon {
+            width: 16px;
+            height: 16px;
+            display: inline-block;
+            flex-shrink: 0;
+        }
+
+        .tiktok-handle {
+            color: var(--text-primary);
+            font-size: 0.8rem;
+            font-weight: 500;
+            line-height: 1.2;
+            display: inline-flex;
+            align-items: baseline;
+            gap: 4px;
+        }
+
+        .tiktok-label {
+            color: var(--text-primary);
+            font-weight: 500;
+        }
+
+        .tiktok-user {
+            color: var(--accent);
+            font-weight: 600;
+        }
+
+        /* "Visits today" block */
         .visits-wrapper {
             text-align: center;
             font-size: 0.8rem;
@@ -250,7 +275,11 @@
             text-align: right;
         }
 
-        /* responsive */
+        .social-cta-mobile {
+            display: none;
+            /* hidden by default */
+        }
+
         @media (max-width: 480px) {
             body {
                 padding: 16px;
@@ -300,7 +329,7 @@
 
             .teto-plush {
                 right: 0px;
-                bottom: 120px;
+                bottom: 180px;
                 width: 110px;
                 max-width: 40%;
             }
@@ -308,6 +337,43 @@
             .site-footer {
                 font-size: 0.7rem;
                 line-height: 1.4;
+            }
+
+            .social-cta-floating {
+                display: none;
+            }
+
+            .social-cta-mobile {
+                display: inline-flex;
+                align-items: center;
+                justify-content: center;
+                gap: 8px;
+
+                margin-top: 6px;
+                align-self: center;
+
+                background: rgba(255, 255, 255, 0.05);
+                border: 1px solid rgba(255, 255, 255, 0.18);
+                border-radius: 999px;
+
+                padding: 6px 12px;
+                text-decoration: none;
+                line-height: 1;
+
+                color: var(--text-primary);
+            }
+
+            .social-cta-mobile .tiktok-icon {
+                width: 16px;
+                height: 16px;
+                display: inline-block;
+            }
+
+            .social-cta-mobile .tiktok-user {
+                font-size: 0.8rem;
+                font-weight: 600;
+                color: var(--accent);
+                line-height: 1;
             }
 
             .visits-wrapper {
@@ -334,6 +400,20 @@
 
         <section class="app-card">
 
+            <a class="social-cta-floating" href="https://www.tiktok.com/@urban.criso?is_from_webapp=1&sender_device=pc"
+                target="_blank" rel="noopener">
+                <span class="tiktok-icon" aria-hidden="true">
+                    <svg viewBox="0 0 24 24" width="16" height="16" fill="currentColor">
+                        <path
+                            d="M15.5 3c.3 2 1.8 3.4 3.6 3.6v3.2c-1.3.1-2.5-.2-3.6-.9v6.6a6 6 0 1 1-5-5.9v3.3a2.7 2.7 0 0 0-1.4-.1 2.7 2.7 0 1 0 3.4 2.6V3h3z" />
+                    </svg>
+                </span>
+                <span class="tiktok-handle">
+                    <span class="tiktok-label">TikTok</span>
+                    <span class="tiktok-user">@urban.criso</span>
+                </span>
+            </a>
+
             <div class="pill-section">
                 <div class="pill">
                     <span class="pill-icon">♪</span>
@@ -358,6 +438,18 @@
                 composers, producers, and labels. “Kasane Teto / 重音テト” is a character originally associated with the
                 UTAU community and the TWINDRILL team.
             </footer>
+
+            <!-- MOBILE: pill sotto il footer -->
+            <a class="social-cta-mobile" href="https://www.tiktok.com/@urban.criso?is_from_webapp=1&sender_device=pc"
+                target="_blank" rel="noopener">
+                <span class="tiktok-icon" aria-hidden="true">
+                    <svg viewBox="0 0 24 24" width="16" height="16" fill="currentColor">
+                        <path
+                            d="M15.5 3c.3 2 1.8 3.4 3.6 3.6v3.2c-1.3.1-2.5-.2-3.6-.9v6.6a6 6 0 1 1-5-5.9v3.3a2.7 2.7 0 0 0-1.4-.1 2.7 2.7 0 1 0 3.4 2.6V3h3z" />
+                    </svg>
+                </span>
+                <span class="tiktok-user">@urban.criso</span>
+            </a>
         </section>
 
         <div class="visits-wrapper">
@@ -374,10 +466,7 @@
             renderSongOfTheDay();
             renderVisitCount();
 
-            // Salva il "giorno corrente" calcolato
             let currentDayIndex = getDayIndex();
-
-            // Controlla ogni minuto se è cambiato giorno
             setInterval(() => {
                 const newDayIndex = getDayIndex();
                 if (newDayIndex !== currentDayIndex) {
@@ -387,35 +476,20 @@
             }, 60 * 1000);
         });
 
-        // Usa solo anno/mese/giorno, così il cambio ora legale non crea sfasamenti.
         function getDayIndex() {
             const now = new Date();
-
-            // oggi normalizzato (mezzanotte UTC basata solo su Y/M/D locali)
-            const utcToday = Date.UTC(
-                now.getFullYear(),
-                now.getMonth(),
-                now.getDate()
-            );
-
-            // data di partenza: 1 Gennaio 2024
+            const utcToday = Date.UTC(now.getFullYear(), now.getMonth(), now.getDate());
             const utcEpoch = Date.UTC(2024, 0, 1);
-
             const diff = utcToday - utcEpoch;
-            const days = Math.floor(diff / (1000 * 60 * 60 * 24));
-            return days;
+            return Math.floor(diff / (1000 * 60 * 60 * 24));
         }
 
-        // aggiorna titolo e iframe YouTube.
         async function renderSongOfTheDay() {
             try {
                 const response = await fetch('songs.json');
                 const songs = await response.json();
-
                 const dayIndex = getDayIndex();
-                const songCount = songs.length;
-                const todaySongIndex = dayIndex % songCount;
-                const song = songs[todaySongIndex];
+                const song = songs[dayIndex % songs.length];
 
                 const titleElement = document.getElementById('song-title');
                 const playerElement = document.getElementById('youtube-player');
@@ -432,7 +506,6 @@
             }
         }
 
-        // Ritorna la data locale dell'utente (tipo "2025-10-26").
         function getTodayKeyLocal() {
             const now = new Date();
             const y = now.getFullYear();
@@ -441,7 +514,6 @@
             return `${y}-${m}-${d}`;
         }
 
-        // Contatore "Visits today:"
         function renderVisitCount() {
             const el = document.getElementById('visits-count');
             const todayKey = getTodayKeyLocal();
@@ -458,7 +530,6 @@
             }
         }
     </script>
-
 
 </body>
 
